需要修复